--- a/Sample0/Sample0/Sample0.vcxproj.filters
+++ b/Sample0/Sample0/Sample0.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="DX11Template.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CommonWindows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
