--- a/Sample0/Sample0/Sample0.vcxproj
+++ b/Sample0/Sample0/Sample0.vcxproj
@@ -75,10 +75,9 @@
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CommonDirectX.h" />
+    <ClInclude Include="CommonRendering.h" />
     <ClInclude Include="CommonManagers.h" />
-    <ClInclude Include="CommonSTL.h" />
-    <ClInclude Include="CommonWindows.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
