--- a/Sample0/Sample0/Sample0.vcxproj.filters
+++ b/Sample0/Sample0/Sample0.vcxproj.filters
@@ -13,6 +13,10 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="HLSL">
+      <UniqueIdentifier>{b9666187-5111-4670-8e24-a6cf0eebe368}</UniqueIdentifier>
+      <Extensions>hlsl</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX11Template.cpp">
@@ -46,6 +50,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="color.hlsl" />
+    <None Include="color.hlsl">
+      <Filter>HLSL</Filter>
+    </None>
   </ItemGroup>
 </Project>
