--- a/Sample1 - deferred/Sample0/Sample0.vcxproj.filters
+++ b/Sample1 - deferred/Sample0/Sample0.vcxproj.filters
@@ -162,6 +162,18 @@
     <ClInclude Include="..\..\..\..\Downloads\DirectXTK\Src\SharedResourcePool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Resources.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GlobalVariables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WinInit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="D3DInit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="color.hlsl">
@@ -169,6 +181,9 @@
     </None>
     <None Include="..\..\..\..\Downloads\DirectXTK\Src\TeapotData.inc">
       <Filter>Header Files</Filter>
+    </None>
+    <None Include="SceneDraw.hlsl">
+      <Filter>HLSL</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
